# pgbilling

./: .gitignore  CMakeLists.txt  README.md
api/: api-server  plugin.py  server.pl
api/modules/: ws1c.pm
api/plugins/: radius.py  sms.py  snmptrap.py
cmake_modules/: FindPOSTGRES.cmake  FindPQXX.cmake
core/: config.sample.js  package.json  server.js
core/modules/: smotreshka.js
etc/: admin.conf  api-server.service  api.conf  cabinet.conf  radiusd.conf  ws-admin.service  ws-cabinet.service
sql/: database.sql  def-admin.sql  def-billing.sql  def-cabinet.sql  def-network.sql  def-payments.sql  def-site.sql  def-system.sql  drop-all.sql  test-data.sql  update-db
ui/: config.sample.js  package.json  server.js
ui/html/: index.html
ui/html/assets/: framework.js
ui/html/cabinet/: app.js  index.html
ui/html/cabinet/pages/: account_add.html  account_logs.html  account_pay.html  account_promise.html  create_smotreshka.html  index.html  service.html  smotreshka_list.html  user_creds.html
ui/modules/: commands.js
ws-server/: CMakeLists.txt  main.cpp  wsproto.proto
www/admin/: index.html  webix
www/admin/js/: forms.js  main.js  openmap.js
www/cabinet/: index.html
www/cabinet/css/: jquery-ui-1.8.12.custom.css  main.css
www/cabinet/js/: main.js
www/cabinet/webix/: theme.siberia.css  webix.css  webix.d.ts  webix.js  webix.js.map
www/cabinet/webix/skins/: flat.css  glamour.css  light.css  metro.css  touch.css  web.css
www/cabinet/webix/skins/debug/: flat.css  glamour.css  light.css  metro.css  touch.css  web.css
www/landing/: api.php  block.html  config.sample.php  new.html
www/payments/: common.php  fmobile.php  rpsystem.php  yandex.php
